---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: ????
  Changes:
    - Updated Russian locale by Astorin
    - The search GUI now supports locale-specific widths
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: 2021-08-10
  Changes:
    - Removed `/RecipeBook` command, replaced with `/rb-refresh-all`
    - Updated to flib 0.8.2
  Bugfixes:
    - Fixed a crash when a mod added or removed pretty much anything to/from an existing save
    - Fixed that a new search GUI would be created every time the player joined a multiplayer game
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2021-08-09
  Changes:
    - Updated to flib 0.8.1
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2021-08-09
  Features:
    - Added new pages:
      - Fuel category: fluids and items belonging to each category
      - Group: fluids, items, and recipes belonging to each group
      - Lab: research speed, compatible science packs, compatible fuels, fuel categories, unlocked by, placeable by, size
      - Mining drill: mining speed, mining area, compatible resources, resource categories, compatible fuels, fuel categories, unlocked by, placeable by, size
      - Offshore pump: pumping speed, output fluid, unlocked by, placeable by, size
      - Recipe category: fluids, items, and recipes belonging to each recipe category
      - Resource: resource category, required fluid, mining time, products, compatible mining drills
      - Resource category: resources and mining drills belonging to that category
    - Added numerous properties that were previously confined to tooltips, and new properties:
      - Crafter: Crafting speed, ingredient limit, size, compatible fuels, fuel categories